Differentiate between position and HEAD position
The difference is explained at the top of the FileReader.